Update 1-11. 프로그래밍 코드 최적화(02.13).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
@@ -59,6 +59,46 @@ this.getOwnerComponent().getRouter()
 </br>
 
 1. `oEvent` 을 활용하는 경우 (이벤트 발생 시)
+```java
+// [1] 가장 권장: 클릭된 행의 주소(Context)에서 바로 데이터 추출
+let oData = oEvent.getParameter("rowContext").getObject();
+
+// [2] 클릭된 행 번호(rowIndex)를 얻은 후 소스(테이블)에서 데이터 추출
+let oData = oEvent.getSource().getContextByIndex(oEvent.getParameter("rowIndex")).getObject();
+
+// [3] 이벤트 소스(테이블 자신)의 현재 선택된 인덱스(대표 번호)로 추출
+let oData = oEvent.getSource().getContextByIndex(oEvent.getSource().getSelectedIndex()).getObject();
+
+// [4] 파라미터 묶음 전체(getParameters)를 통해 rowContext 접근
+let oData = oEvent.getParameters().rowContext.getObject();
+```
+
+2. 테이블 ID(`this.byId`)를 직접 활용하는 경우 (어디서든 가능)
+```java
+// [5] 테이블 ID로 접근하여 현재 선택된 인덱스(대표 번호)로 추출
+let oData = this.byId("idEmployeeTable").getContextByIndex(this.byId("idEmployeeTable").getSelectedIndex()).getObject();
+
+// [6] 선택된 모든 인덱스 배열(Indices) 중 첫 번째[0] 번호로 추출
+let oData = this.byId("idEmployeeTable").getContextByIndex(this.byId("idEmployeeTable").getSelectedIndices()[0]).getObject();
+
+// [7] 테이블의 경로(Path)를 알아낸 뒤 모델(Model)에서 직접 데이터 읽기
+let oTable = this.byId("idEmployeeTable");
+let sPath = oTable.getContextByIndex(oTable.getSelectedIndex()).getPath();
+let oData = oTable.getModel().getProperty(sPath);
+```
+
+3. 행(Row) 안에 심어둔 버튼을 눌렀을 때
+```java
+// [8] 버튼 자체의 바인딩 컨텍스트(주소)에서 바로 데이터 추출
+let oData = oEvent.getSource().getBindingContext().getObject();
+
+// [9] 버튼의 부모(Row) 객체를 찾아가서 그 행의 데이터를 추출
+let oData = oEvent.getSource().getParent().getBindingContext().getObject();
+
+// [10] 버튼이 속한 모델과 경로(Path) 정보를 조합하여 데이터 추출
+let oBtnSource = oEvent.getSource();
+let oData = oBtnSource.getModel().getProperty(oBtnSource.getBindingContext().getPath());
+```
 </br>
 
 **2) `sap.ui.table.Table`**
