Update 1-11. 프로그래밍 코드 최적화(02.13).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
@@ -60,6 +60,51 @@ this.getOwnerComponent().getRouter()
 - 선택된 행 자체(객체)를 바로 가져옴 (Item 기반 접근)
 </br>
 
+1. 테이블 ID(`this.byId`)로 직접 접근할 때
+```java
+// [1] 가장 표준 (선택된 단일 아이템에서 데이터 추출)
+let oData = this.byId("idMobileTable").getSelectedItem().getBindingContext().getObject();
+
+// [2] 선택된 모든 아이템 배열 중 첫 번째[0]에서 추출
+let oData = this.byId("idMobileTable").getSelectedItems()[0].getBindingContext().getObject();
+
+// [3] 모델과 경로(Path)를 조합해서 모델에서 직접 읽기
+let oTable = this.byId("idMobileTable");
+let sPath = oTable.getSelectedItem().getBindingContext().getPath();
+let oData = oTable.getModel().getProperty(sPath);
+```
+
+2. 이벤트(`selectionChange`)의 oEvent를 활용할 때
+```java
+// [4] 파라미터에서 선택된 아이템(listItem)을 바로 꺼내기
+let oData = oEvent.getParameter("listItem").getBindingContext().getObject();
+
+// [5] 이벤트 소스(테이블 자신)의 '선택된 아이템' 함수로 가져오기
+let oData = oEvent.getSource().getSelectedItem().getBindingContext().getObject();
+
+// [6] 파라미터 묶음(getParameters)을 통해 아이템에 접근
+let oData = oEvent.getParameters().listItem.getBindingContext().getObject();
+```
+
+3. 행(Row) 내부에 심어둔 버튼을 눌렀을 때
+```java
+// [7] 버튼의 바인딩 컨텍스트에서 바로 데이터 추출 (가장 많이 씀)
+let oData = oEvent.getSource().getBindingContext().getObject();
+
+// [8] 버튼의 부모(ColumnListItem)를 찾아가서 데이터 추출
+let oData = oEvent.getSource().getParent().getBindingContext().getObject();
+
+// [9] 버튼이 연결된 모델에서 경로(Path) 정보를 사용하여 추출
+let oBtn = oEvent.getSource();
+let oData = oBtn.getModel().getProperty(oBtn.getBindingContext().getPath());
+```
+</br>
+
+**2) `sap.ui.table.Table`**
+- 대량의 데이터를 다루는 관리자용 화면이나 복잡한 그리드에 사용
+- 몇 번째 줄인지 번호를 먼저 알아내서 데이터를 찾아와야 함(Index 기반 접근)
+</br>
+
 1. `oEvent` 을 활용하는 경우 (이벤트 발생 시)
 ```java
 // [1] 가장 권장: 클릭된 행의 주소(Context)에서 바로 데이터 추출
@@ -101,8 +146,3 @@ let oData = oEvent.getSource().getParent().getBindingContext().getObject();
 let oBtnSource = oEvent.getSource();
 let oData = oBtnSource.getModel().getProperty(oBtnSource.getBindingContext().getPath());
 ```
-</br>
-
-**2) `sap.ui.table.Table`**
-- 대량의 데이터를 다루는 관리자용 화면이나 복잡한 그리드에 사용
-- 몇 번째 줄인지 번호를 먼저 알아내서 데이터를 찾아와야 함(Index 기반 접근)
