Update 1-11. 프로그래밍 코드 최적화(02.13).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
@@ -100,6 +100,80 @@ let oData = oBtn.getModel().getProperty(oBtn.getBindingContext().getPath());
 ```
 </br>
 
+- xml 파일에서의 속성 정리
+```html
+<m:Table
+    id="idTable"
+
+    width="100%"                    <!-- 테이블 전체 너비 -->
+    inset="false"                   <!-- 바깥 여백 여부 -->
+    backgroundDesign="Solid"        <!-- 배경 스타일 -->
+
+    headerText="상품목록"            <!-- 테이블 상단 제목 -->
+    footerText="총 100건"            <!-- 하단 텍스트 -->
+
+    mode="SingleSelect"             <!-- 선택 모드 -->
+                                       <!-- None -->
+                                       <!-- SingleSelect -->
+                                       <!-- SingleSelectLeft -->
+                                       <!-- MultiSelect -->
+                                       <!-- Delete -->
+
+    includeItemInSelection="true"   <!-- 행 전체 클릭 시 선택 여부 -->
+
+    growing="true"                  <!-- 점진적 로딩 -->
+    growingThreshold="20"           <!-- 한번에 가져올 데이터 개수 -->
+    growingScrollToLoad="true"      <!-- 스크롤 시 자동 로딩 -->
+    growingTriggerText="더보기"      <!-- 버튼 텍스트 -->
+
+    showSeparators="All"            <!-- 구분선 표시 (All, Inner, None) -->
+
+    sticky="ColumnHeaders,HeaderToolbar" <!-- 헤더 고정 -->
+
+    noDataText="데이터 없음"         <!-- 데이터 없을 때 표시 문구 -->
+
+    alternateRowColors="true"       <!-- 줄무늬 배경 -->
+
+    busyIndicatorDelay="0"          <!-- 로딩 표시 지연시간 -->
+
+    items="{
+        path: '/ProductCollection',
+        sorter: {
+            path: 'Name',
+            descending: false
+        },
+        filters: [
+            { path: 'Category', operator: 'EQ', value1: 'A' }
+        ]
+    }"
+
+    selectionChange="onSelectionChange"   <!-- 행 선택 시 이벤트 -->
+    itemPress="onItemPress"               <!-- 행 클릭 이벤트 -->
+    delete="onDelete"                     <!-- Delete 모드일 때 삭제 이벤트 -->
+    updateFinished="onUpdateFinished"     <!-- 데이터 바인딩 완료 후 -->
+>
+```
+```html
+<m:Column
+    width="200px"              <!-- 컬럼 너비 -->
+    minScreenWidth="Tablet"    <!-- 반응형 최소 화면 -->
+    demandPopin="true"         <!-- 작은 화면 시 아래로 이동 -->
+    hAlign="Center"            <!-- 정렬 -->
+    visible="true"             <!-- 표시 여부 -->
+>
+```
+```html
+<m:ColumnListItem
+    type="Active"          <!-- Active / Navigation / Detail / Inactive -->
+    selected="false"       <!-- 기본 선택 여부 -->
+    visible="true"         <!-- 행 표시 여부 -->
+    highlight="Success"    <!-- 강조 색상 (Success, Error 등) -->
+    press="onPress"        <!-- 행 클릭 이벤트 -->
+>
+```
+</br>
+</br>
+
 **2) `sap.ui.table.Table`**
 - 대량의 데이터를 다루는 관리자용 화면이나 복잡한 그리드에 사용
 - 몇 번째 줄인지 번호를 먼저 알아내서 데이터를 찾아와야 함(Index 기반 접근)
