Update 1-11. 프로그래밍 코드 최적화(02.13).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
@@ -220,3 +220,75 @@ let oData = oEvent.getSource().getParent().getBindingContext().getObject();
 let oBtnSource = oEvent.getSource();
 let oData = oBtnSource.getModel().getProperty(oBtnSource.getBindingContext().getPath());
 ```
+</br>
+
+- xml 파일에서의 속성 정리
+```html
+<t:Table
+    id="idAdminTable"
+
+    width="100%"                     <!-- 테이블 전체 너비 -->
+    visible="true"                   <!-- 표시 여부 -->
+
+    rows="{/ProductCollection}"      <!-- 데이터 바인딩 (items 아님, rows 사용!) -->
+
+    visibleRowCount="10"             <!-- 화면에 보이는 행 개수 -->
+    visibleRowCountMode="Fixed"      <!-- Fixed / Auto / Interactive -->
+
+    firstVisibleRow="0"              <!-- 시작 행 인덱스 -->
+
+    rowHeight="40"                   <!-- 행 높이 -->
+    columnHeaderHeight="40"          <!-- 헤더 높이 -->
+
+    selectionMode="MultiToggle"      <!-- None / Single / Multi / MultiToggle -->
+    selectionBehavior="Row"          <!-- Row / RowOnly / RowSelector -->
+
+    enableSelectAll="true"           <!-- 전체 선택 체크박스 표시 -->
+
+    enableColumnReordering="true"    <!-- 컬럼 순서 변경 가능 -->
+    enableSorting="true"             <!-- 정렬 기능 활성화 -->
+    enableFiltering="true"           <!-- 필터 기능 활성화 -->
+    enableColumnFreeze="true"        <!-- 컬럼 고정 가능 -->
+
+    fixedColumnCount="1"             <!-- 고정 컬럼 개수 -->
+    fixedRowCount="1"                <!-- 상단 고정 행 개수 -->
+    fixedBottomRowCount="1"          <!-- 하단 고정 행 개수 -->
+
+    showNoData="true"                <!-- 데이터 없을 때 표시 -->
+    noData="데이터 없음"             <!-- 커스텀 메시지 -->
+
+    alternateRowColors="true"        <!-- 줄무늬 배경 -->
+
+    editable="false"                 <!-- 편집 가능 여부 -->
+
+    rowSelectionChange="onRowSelect" <!-- 행 선택 이벤트 -->
+    cellClick="onCellClick"          <!-- 셀 클릭 이벤트 -->
+    sort="onSort"                    <!-- 정렬 이벤트 -->
+    filter="onFilter"                <!-- 필터 이벤트 -->
+    columnMove="onColumnMove"        <!-- 컬럼 이동 이벤트 -->
+>
+```
+```html
+<t:Column
+    width="200px"                  <!-- 컬럼 너비 -->
+    visible="true"                 <!-- 표시 여부 -->
+
+    sortProperty="Name"            <!-- 정렬 기준 필드 -->
+    filterProperty="Name"          <!-- 필터 기준 필드 -->
+
+    filtered="false"               <!-- 필터 적용 여부 -->
+    sorted="false"                 <!-- 정렬 적용 여부 -->
+    sortOrder="Ascending"          <!-- Ascending / Descending -->
+
+    hAlign="Center"                <!-- 정렬 -->
+    resizable="true"               <!-- 크기 조절 가능 -->
+    autoResizable="true"           <!-- 자동 크기 조절 -->
+
+    showFilterMenuEntry="true"     <!-- 필터 메뉴 표시 -->
+>
+    <m:Label text="Name"/>         <!-- 헤더 -->
+    <t:template>
+        <m:Text text="{Name}"/>    <!-- 셀 템플릿 -->
+    </t:template>
+</t:Column>
+```
