Update 1-11. 프로그래밍 코드 최적화(02.13).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
@@ -292,3 +292,51 @@ let oData = oBtnSource.getModel().getProperty(oBtnSource.getBindingContext().get
     </t:template>
 </t:Column>
 ```
+</br>
+</br>
+</br>
+
+### 4) oEvent 파라미터 정리
+</br>
+
+**1) 입력 및 검색 관련 (Text/Value)**
+- 사용자가 직접 타이핑하거나 검색할 때 씀
+```java
+// [Input] 값이 변경되었을 때
+let sValue = oEvent.getParameter("value");        // 현재 입력된 값
+let sNewValue = oEvent.getParameter("newValue");  // 새로 바뀐 값
+
+// [SearchField] 검색어를 입력하고 엔터/돋보기를 눌렀을 때
+let sQuery = oEvent.getParameter("query");        // 입력한 검색어
+
+// [DatePicker] 날짜를 선택했을 때
+let sDateValue = oEvent.getParameter("value");    // 선택된 날짜 문자열
+let bValid = oEvent.getParameter("valid");        // 입력한 날짜가 유효한지(T/F)
+```
+
+**2) 항목 및 행 선택 관련 (Item/Context)**
+- 목록이나 테이블에서 무언가를 골랐을 때 씀
+```java
+// [Select / ComboBox] 드롭다운에서 항목을 골랐을 때
+let oItem = oEvent.getParameter("selectedItem");  // 선택된 아이템 객체 전체
+
+// [m.table / List] 테이블의 줄(Row)을 클릭했을 때
+let oListItem = oEvent.getParameter("listItem");  // 클릭된 행 객체
+
+// [ui.table] 테이블의 행을 클릭했을 때
+let oRowContext = oEvent.getParameter("rowContext"); // 선택된 행의 데이터 주소
+let iRowIndex = oEvent.getParameter("rowIndex");     // 선택된 행의 번호
+```
+
+**3) 상태 체크 관련 (Boolean)**
+- 체크박스나 스위치처럼 켰다 껐다 하는 상태를 확인할 때 씀
+```java
+// [CheckBox / RadioButton] 체크 상태가 변했을 때
+let bSelected = oEvent.getParameter("selected"); // 체크됨(true) / 해제됨(false)
+
+// [Switch] 스위치를 밀어서 변경했을 때
+let bState = oEvent.getParameter("state");       // On(true) / Off(false)
+
+// [ToggleButton] 눌린 상태를 유지하는 버튼일 때
+let bPressed = oEvent.getParameter("pressed");   // 눌림(true) / 안눌림(false)
+```
