--- a/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.13).md
@@ -1,7 +1,7 @@
 # < 멘토멘티 정리>
 </br>
 
-### 1) Controller 안에서의 this 정리
+### < 1) Controller 안에서의 this 정리 >
 </br>
 
 **1) `.controller.js` 파일 내부에서의 `this`**
@@ -33,7 +33,7 @@ success: function() {
 </br>
 </br>
 
-### 2) `getView()` vs `getOwnerComponent()`
+### < 2) `getView()` vs `getOwnerComponent()` >
 </br>
 
 **1) `this.getView()`**
@@ -52,7 +52,7 @@ this.getOwnerComponent().getRouter()
 </br>
 </br>
 
-### 3) `ui.table` vs `m.table`
+### < 3) `ui.table` vs `m.table` >
 </br>
 
 **1) `sap.m.Table`**
@@ -296,7 +296,7 @@ let oData = oBtnSource.getModel().getProperty(oBtnSource.getBindingContext().get
 </br>
 </br>
 
-### 4) oEvent 파라미터 정리
+### < 4) oEvent 파라미터 정리 >
 </br>
 
 **1) 입력 및 검색 관련 (Text/Value)**
@@ -339,4 +339,80 @@ let bState = oEvent.getParameter("state");       // On(true) / Off(false)
 
 // [ToggleButton] 눌린 상태를 유지하는 버튼일 때
 let bPressed = oEvent.getParameter("pressed");   // 눌림(true) / 안눌림(false)
+```
+
+**4) 탭 및 메뉴 이동 관련 (Key/ID)**
+- 상단 탭이나 사이드 메뉴를 클릭했을 때 씀
+```java
+// [IconTabBar] 상단 탭을 클릭했을 때
+let sKey = oEvent.getParameter("key");            // 클릭한 탭의 고유 키값
+let oTabItem = oEvent.getParameter("item");       // 클릭한 탭 객체 전체
+
+// [SideNavigation] 왼쪽 메뉴를 클릭했을 때
+let oNavItem = oEvent.getParameter("item");       // 클릭한 메뉴 아이템 객체
+```
+
+**5) 특수 기능 관련 (Data/File)**
+```java
+// [UploadCollection] 파일을 올렸을 때
+let aFiles = oEvent.getParameter("files");        // 업로드된 파일 리스트 배열
+
+// [DragDrop] 드래그 앤 드롭 시
+let oDragData = oEvent.getParameter("data");      // 전달되는 커스텀 데이터
+```
+</br>
+</br>
+</br>
+
+### < 5) console.log를 활용한 탐색법 >
+</br>
+
+**1) `oEvent.getParameters()` 의 모든 내용 확인하기 (getParameters)**
+- 이벤트 핸들러 맨 첫 줄에 아래 코드를 넣기
+- 콘솔에 찍힌 oItem을 클릭해 펼친 뒤, 맨 아래 `[[Prototype]]`을 계속 열기
+- 알파벳 순서로 `getKey()`, `getText()` 같은 사용 가능한 함수들이 숨어 있음
+```java
+onSelectChange: function(oEvent) {
+    // A. 현재 이벤트가 줄 수 있는 모든 파라미터 명단 확인
+    console.log(oEvent.getParameters()); 
+    // 출력 결과 예: { selectedItem: c, id: "..." } -> 여기서 "selectedItem"이라는 이름을 확인!
+
+    // B. 특정 객체(항목)를 변수에 담고 구조 확인
+    let oItem = oEvent.getParameter("selectedItem");
+    console.log(oItem); 
+    
+    // C. (꿀팁) log 대신 dir을 쓰면 함수 목록을 더 쉽게 찾음
+    console.dir(oItem); 
+}
+```
+
+**2) `oEvent.getSource()` 의 모든 내용 확인하기**
+- 이 이벤트를 일으킨 컨트롤(버튼, 셀렉트, 인풋 등) 자체가 어떤 함수를 가졌는지 궁금할 때 사용
+- `oSelect.getSelectedKey()` 처럼 해당 컨트롤에만 특화된 "필살기 함수"를 찾을 때 유용
+```java
+onSelectChange: function(oEvent) {
+    // A. 이 이벤트를 일으킨 주인공(Select 박스)을 소환
+    let oSelect = oEvent.getSource(); 
+
+    // B. 이 컨트롤이 가진 모든 정보와 함수 리스트를 콘솔에 출력
+    console.dir(oSelect); 
+    
+    // C. 맨 아래 [[Prototype]]을 열어보면 'getSelectedKey', 'setEditable' 등이 나열되어 있음
+    console.log("아이디 확인:", oSelect.getId());
+}
+```
+
+**3) this.byId() 로 특정 컨트롤 직접 찍어보기**
+```java
+onAnyEvent: function(oEvent) {
+    // A. 내가 조작하고 싶은 다른 컨트롤을 ID로 가져오기
+    let oInput = this.byId("idInputName");
+
+    // B. 가져온 객체가 맞는지, 어떤 함수가 있는지 확인
+    console.log(oInput);
+    console.dir(oInput);
+
+    // C. 보통 'set'으로 시작하는 함수를 찾으면 컨트롤을 내 마음대로 바꿀 수 있음
+    // 예: oInput.setEditable(false); (입력창 잠그기)
+}
 ```
