Update 6-2. 2주차 멘토멘티 FIORI 정리.md

--- a/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
+++ b/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
@@ -1,7 +1,7 @@
 # < 멘토멘티 정리>
 </br>
 
-### < 1) Controller 안에서의 this 정리 >
+## 1) Controller 안에서의 this 정리 
 </br>
 
 **1) `.controller.js` 파일 내부에서의 `this`**
