Update 6-2. 2주차 멘토멘티 FIORI 정리.md

--- a/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
+++ b/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
@@ -416,3 +416,11 @@ onAnyEvent: function(oEvent) {
     // 예: oInput.setEditable(false); (입력창 잠그기)
 }
 ```
+</br>
+</br>
+</br>
+
+## 6) 라우팅(Routing)
+</br>
+
+### 1) 1단계: manifest.json 설정 (길 찾기 지도)
