Update 6-2. 2주차 멘토멘티 FIORI 정리.md

--- a/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
+++ b/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
@@ -40,10 +40,11 @@ success: function() {
 ## 2) `getView()` vs `getOwnerComponent()` 
 </br>
 
-**1) `this.getView()`**
+### 1) `this.getView()`
 - 컨트롤러가 관리하는 특정 화면에 접근할 때 사용
+</br>
 
-**2) `this.getOwnerComponent()`**
+### 2) `this.getOwnerComponent()`
 - 프로젝트 전체를 관리하는 Component.js 접근
 - 모델, 라우터 등 접근 가능
 ```java
@@ -55,16 +56,17 @@ this.getOwnerComponent().getRouter()
 </br>
 </br>
 </br>
+</br>
 
 ## 3) `ui.table` vs `m.table` 
 </br>
 
-**1) `sap.m.Table`**
+### 1) `sap.m.Table`
 - 데이터 양이 아주 많지 않을 때(약 100건 내외) 사용
 - 선택된 행 자체(객체)를 바로 가져옴 (Item 기반 접근)
 </br>
 
-1. 테이블 ID(`this.byId`)로 직접 접근할 때
+**1. 테이블 ID(`this.byId`)로 직접 접근할 때**
 ```java
 // [1] 가장 표준 (선택된 단일 아이템에서 데이터 추출)
 let oData = this.byId("idMobileTable").getSelectedItem().getBindingContext().getObject();
@@ -78,7 +80,7 @@ let sPath = oTable.getSelectedItem().getBindingContext().getPath();
 let oData = oTable.getModel().getProperty(sPath);
 ```
 
-2. 이벤트(`selectionChange`)의 oEvent를 활용할 때
+**2. 이벤트(`selectionChange`)의 oEvent를 활용할 때**
 ```java
 // [4] 파라미터에서 선택된 아이템(listItem)을 바로 꺼내기
 let oData = oEvent.getParameter("listItem").getBindingContext().getObject();
@@ -90,7 +92,7 @@ let oData = oEvent.getSource().getSelectedItem().getBindingContext().getObject()
 let oData = oEvent.getParameters().listItem.getBindingContext().getObject();
 ```
 
-3. 행(Row) 내부에 심어둔 버튼을 눌렀을 때
+**3. 행(Row) 내부에 심어둔 버튼을 눌렀을 때**
 ```java
 // [7] 버튼의 바인딩 컨텍스트에서 바로 데이터 추출 (가장 많이 씀)
 let oData = oEvent.getSource().getBindingContext().getObject();
