Update 6-2. 2주차 멘토멘티 FIORI 정리.md

--- a/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
+++ b/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
@@ -425,6 +425,108 @@ onAnyEvent: function(oEvent) {
 </br>
 
 ## 6) 라우팅(Routing)
+- `navTo` 로 이동 → `attachPatternMatched` 로 수신 → `arguments` 로 파라미터 사용
 </br>
 
-### 1) 1단계: manifest.json 설정 (길 찾기 지도)
+### 1단계) `manifest.json` 설정 (길 찾기 지도)
+- routes는 URL 경로 규칙 정의, targets는 실제로 보여줄 View 정보 정의
+```java
+"routing": {
+  "routes": [
+    {
+      "name": "Main",           // JS 코드(navTo)에서 이 화면을 호출할 때 쓰는 별명
+      "pattern": "",            // "": 앱을 처음 켰을 때 보여주는 초기 화면(Default) 경로
+      "target": "TargetMain"    // 이 경로로 접속했을 때 보여줄 목적지(Target) 연결
+    },
+    {
+      "name": "Detail",         // 상세 페이지 호출용 별명
+      /* 패턴 예시 정리:
+         - "detail": 파라미터가 전혀 없는 고정된 정적 페이지
+         - "detail/{id}": id값이 반드시 있어야만 이동하는 필수 파라미터 경로
+         - "detail/:id:": id값이 있으면 보여주고 없어도 에러 없이 이동하는 선택 파라미터
+         - "detail/{id}/:type:": id는 반드시 필요하고 type은 상황에 따라 생략 가능한 조합
+      */
+      "pattern": "detail/{empId}", 
+      "target": "TargetDetail"
+    }
+  ],
+  "targets": {
+    "TargetMain": { 
+      "viewId": "idMain",       // View 객체에 부여될 고유 ID (디버깅/조작 시 활용)
+      "viewName": "Main"        // 실제 파일 이름 (Main.view.xml 호출)
+    },
+    "TargetDetail": { 
+      "viewId": "idDetail", 
+      "viewName": "Detail" 
+    }
+  }
+}
+```
+</br>
+
+### 2단계) 화면 이동 실행 (Controller - navTo)
+- 사용자가 버튼을 눌렀을 때 manifest에 정의한 name을 호출하여 주소를 바꾸고 데이터를 실어 보냄
+- navTo의 첫 번째 인자는 routes의 name이며, 두 번째 인자는 패턴에 정의된 중괄호{ } 안의 변수명과 일치해야 함
+```java
+// Main.controller.js 내부 함수
+onNavToDetail: function() {
+    // 1. 라우터 객체 소환 (Component.js에 설정된 라우터를 가져옴)
+    const oRouter = this.getOwnerComponent().getRouter();
+
+    // 2. 목적지로 이동 (Route name과 파라미터 전달)
+    oRouter.navTo("Detail", {
+        empId: "P001" // manifest의 pattern {empId}와 이름이 100% 일치해야 함
+    });
+}
+```
+</br>
+
+### 3단계) 도착해서 짐 풀기 (Controller - 수신)
+- `attachPatternMatched` 는 해당 라우트가 매칭될 때마다 실행되어 URL 파라미터를 받아오는 역할
+- 상세 화면은 재사용되므로, 주소가 바뀔 때마다 이 이벤트로 값을 다시 받아야 함
+- `oEvent.getParameter("arguments")` 로 전달된 파라미터를 꺼내서 화면 로직에 사용함
+```java
+// Detail.controller.js
+onInit: function() {
+    const oRouter = this.getOwnerComponent().getRouter();
+    
+    // 이 컨트롤러(this)의 _onObjectMatched 함수를 실행하되, 
+    // 그 함수 안에서도 'this'가 이 컨트롤러임을 보장하기 위해 마지막에 this를 붙임
+    oRouter.getRoute("Detail").attachPatternMatched(this._onObjectMatched, this);
+},
+
+_onObjectMatched: function(oEvent) {
+    const oArgs = oEvent.getParameter("arguments");
+    console.log("수신 ID:", oArgs.empId);
+}
+```
+</br>
+
+### 4단계) 메인 화면으로 복귀 (Detail → Main)
+- 돌아갈 때는 넘길 데이터가 없으므로 빈 객체 `{}` 를 전달
+```java
+// Detail.controller.js
+onNavBack: function() {
+    const oRouter = this.getOwnerComponent().getRouter();
+    
+    // "Main" 라우트로 이동 (패턴이 ""이므로 추가 데이터 불필요)
+    oRouter.navTo("Main", {});
+}
+```
+</br>
+
+### 5단계) 메인 화면 복귀 감지 (Main 화면)
+```java
+// Main.controller.js
+onInit: function() {
+    const oRouter = this.getOwnerComponent().getRouter();
+    
+    // 메인 경로("")에 들어오는 순간을 감시
+    oRouter.getRoute("Main").attachPatternMatched(this._onMasterMatched, this);
+},
+
+_onMasterMatched: function(oEvent) {
+    // 상세 페이지에서 수정 후 돌아왔을 때 데이터를 최신화하는 로직을 주로 작성함
+    console.log("메인 화면으로 다시 돌아왔습니다. 데이터를 새로고침합니다.");
+}
+```
