Update 6-2. 2주차 멘토멘티 FIORI 정리.md

--- a/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
+++ b/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
@@ -530,3 +530,61 @@ _onMasterMatched: function(oEvent) {
     console.log("메인 화면으로 다시 돌아왔습니다. 데이터를 새로고침합니다.");
 }
 ```
+</br>
+</br>
+</br>
+
+## 7) SAPUI5 다이얼로그 컨트롤 접근 방법 3가지
+</br>
+
+### 1) `sap.ui.getCore().byId()` 방식
+- View 소속과 상관없이 SAPUI5 엔진 전체(Core)에서 컨트롤을 찾음
+```java
+// 전역 Core에서 해당 ID를 가진 객체를 직접 낚아챔
+// 주의: 뷰 ID가 붙은 실제 '풀네임'을 적어야 할 수도 있음
+let sKey = sap.ui.getCore().byId("idOption").getSelectedKey();
+```
+</br>
+
+### 2) `this.byId()` 방식
+- Fragment 로드 시 현재 View의 ID 체계에 편입시키는 방식
+```java
+// 🔹 Fragment 로드
+Fragment.load({
+    id: this.getView().getId(),      // 현재 View의 ID를 Prefix로 부여 (ID 체계 통합)
+    name: "zuimemberb03.view.fragment.oDialog",
+    controller: this                 // 컨트롤러 연결 (this.byId 사용 가능하게 함)
+}).then(function(oDialog){
+    this._oDialog = oDialog;
+
+    // 💡 this.getView().addDependent(this._oDialog) 의 역할
+    // 1. 모델 공유: 부모(View)가 가진 모든 데이터 모델을 다이얼로그도 그대로 쓸 수 있게 함.
+    // 2. 생명주기 연결: View가 파괴될 때 다이얼로그도 자동으로 메모리에서 해제됨.
+    // 3. ID 관리: View의 ID 범주 안에 다이얼로그를 포함시켜 관리를 용이하게 함.
+    this.getView().addDependent(this._oDialog); 
+
+    this._oDialog.open();
+}.bind(this)); 
+
+// 🔹 컨트롤 접근 방법
+var sKey = this.byId("idOption").getSelectedKey();
+```
+</br>
+
+### 3) `this._oDialog.byId()` 방식
+- Fragment에 View와 별개의 고유한 ID 범위를 부여하여 격리하는 방식
+```java
+// 🔹 Fragment 로드 (별도 ID "myDlg" 지정)
+Fragment.load({
+    id: "myDlg", 
+    name: "zuimemberb03.view.fragment.oDialog",
+    controller: this
+}).then(function(oDialog){
+    this._oDialog = oDialog;
+    this.getView().addDependent(this._oDialog); // 모델 공유를 위해 여전히 필요함
+    this._oDialog.open();
+}.bind(this));
+
+// 🔹 컨트롤 접근 방법 (다이얼로그 객체를 기점으로 찾음)
+var sKey = this._oDialog.byId("idOption").getSelectedKey();
+```
