Update 6-2. 2주차 멘토멘티 FIORI 정리.md

--- a/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
+++ b/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
@@ -533,6 +533,7 @@ _onMasterMatched: function(oEvent) {
 </br>
 </br>
 </br>
+</br>
 
 ## 7) SAPUI5 다이얼로그 컨트롤 접근 방법 3가지
 </br>
@@ -587,4 +588,34 @@ Fragment.load({
 
 // 🔹 컨트롤 접근 방법 (다이얼로그 객체를 기점으로 찾음)
 var sKey = this._oDialog.byId("idOption").getSelectedKey();
+```
+</br>
+</br>
+</br>
+</br>
+
+## 7) 데이터 추출: find (단건) vs filter (다건)
+</br>
+
+### 1) find() : 단건
+```java
+// 결과값은 [객체 { }] 형태
+let oResult = oData.find(function(item) {
+    return item.Carrid === "AA";
+});
+
+console.log(oResult); 
+// 출력: { Carrid: "AA", Connid: "001", ... }
+```
+</br>
+
+### 2) filter() : 다건
+```java
+// 결과값은 [배열 [ ]] 형태
+let aResults = oData.filter(function(item) {
+    return item.Carrid === "AA";
+});
+
+console.log(aResults); 
+// 출력: [{Carrid: "AA", Connid: "001"}, {Carrid: "AA", Connid: "002"}, {Carrid: "AA", Connid: "003"}]
 ```
