Update 6-2. 2주차 멘토멘티 FIORI 정리.md

--- a/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
+++ b/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
@@ -619,3 +619,53 @@ let aResults = oData.filter(function(item) {
 console.log(aResults); 
 // 출력: [{Carrid: "AA", Connid: "001"}, {Carrid: "AA", Connid: "002"}, {Carrid: "AA", Connid: "003"}]
 ```
+</br>
+</br>
+</br>
+</br>
+
+## 8) Binding 바인딩 관련 함수
+</br>
+
+### 1) `getBindingContext()` : "너 지금 어디 주소 보고 있니?" (읽기)
+- 컨트롤이 모델의 어느 행(Row)에 연결되어 있는지 그 주소 객체(Context)를 가져옴
+```java
+onPressRow: function(oEvent) {
+    // 클릭한 행의 주소판을 가져옴
+    let oContext = oEvent.getSource().getBindingContext(); 
+
+    // 주소에 담긴 실제 데이터 객체를 꺼냄
+    let oData = oContext.getObject(); 
+    console.log(oData.Carrid); // "AA"
+}
+```
+</br>
+
+### 2) `setBindingContext(oContext)` : "너 이제부터 이 주소를 봐!" (쓰기)
+- 가져온 주소판(oContext)을 특정 컨트롤(예: 다이얼로그)에 강제로 가져다 붙이는 것
+```java
+// 상세 다이얼로그에 'AA' 항공사 주소를 심어줌
+let oDialog = this.byId("idDetailDialog");
+oDialog.setBindingContext(oContext); // 이제 다이얼로그 내부 자식들은 AA 데이터를 보게 됨
+oDialog.open();
+```
+</br>
+
+### 3) `getBinding("속성명")` : "데이터 파이프라인 좀 빌려줘!" (읽기)
+- 컨트롤과 모델 사이에 놓여 있는 '연결 통로(Binding Object)' 자체를 꺼내옴
+```java
+// 테이블의 'items'라는 수도관(통로)을 가져옴
+let oTableBinding = this.byId("idTable").getBinding("items");
+
+// 이 통로에 'AA'만 통과시키는 필터기를 설치함
+oTableBinding.filter([new sap.ui.model.Filter("Carrid", "EQ", "AA")]);
+```
+</br>
+
+### 4) `bindElement("경로")` : "이 화면은 이 경로에 꽂아버려!" (쓰기/설정)
+- setBindingContext가 '주소 객체'를 넣는다면, 이건 "/CarrierSet('AA')" 같은 문자열 경로를 직접 던져서 새로운 연결을 맺음
+```java
+// 상세 화면 뷰를 특정 데이터 경로와 직접 연결함
+this.getView().bindElement("/CarrierSet('AA')");
+```
+</br>
