Update 웹 UI 프레임워크를 활용한 개발 (10.31).md

--- a/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (10.31).md
+++ b/HTML_Javascript/웹 UI 프레임워크를 활용한 개발 (10.31).md
@@ -107,6 +107,24 @@ let entity = entities[0];      // 첫 번째 Entity
 let a = entity.a;              // Complex Type
 let fieldValue = a.Field;      // 속성 값
 ```
+```java
+{
+  "EntitySet": [
+    {
+      "Name": "홍길동",
+      "a": {
+        "Field": "서울"
+      }
+    },
+    {
+      "Name": "박길동",
+      "a": {
+        "Field": "부산"
+      }
+    }
+  ]
+}
+```
 </br>
 
 ### filters
