Update 6-2. 2주차 멘토멘티 FIORI 정리.md

--- a/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
+++ b/RAP/6-2. 2주차 멘토멘티 FIORI 정리.md
@@ -669,3 +669,66 @@ oTableBinding.filter([new sap.ui.model.Filter("Carrid", "EQ", "AA")]);
 this.getView().bindElement("/CarrierSet('AA')");
 ```
 </br>
+</br>
+</br>
+</br>
+
+## 9) Filter & Sorter
+</br>
+
+### 1) Filter
+- js 파일
+```java
+new Filter("필드명", FilterOperator.연산자, 값1, 값2);
+```
+```java
+let oTable = this.byId("idTable");
+let aFilters = [
+    new Filter("Name", FilterOperator.Contains, "김")
+];
+oTable.getBinding("items").filter(aFilters);
+```
+- xml 파일
+```html
+items="{
+  path: '모델>/EntitySet',
+  filters: [{ path:'필드', operator:'연산자', value1:'값' }]
+}"
+```
+```html
+<Table items="{
+    path: 'people>/People',
+    filters: [
+        { path: 'Name', operator: 'Contains', value1: '김' }
+    ]
+}">
+```
+</br>
+
+### 2) Sorter
+- js 파일
+```java
+new Sorter("필드명", true/false);
+```
+```java
+let oTable = this.byId("idTable");
+let aSorters = [
+    new Sorter("Age", true)   // true = 내림차순
+];
+oTable.getBinding("items").sort(aSorters);
+```
+- xml 파일
+```html
+items="{
+  path:'모델>/EntitySet',
+  sorter:[{ path:'필드', descending:true }]
+}"
+```
+```html
+<Table items="{
+    path: 'people>/People',
+    sorter: [
+        { path: 'Age', descending: true }
+    ]
+}">
+```
