Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -1,1 +1,15 @@
+## <  핵심 개념 >
+- **1) npm 기반 프론트엔드 배포 절차 정리**
+- **2) SAP UI5 테마 커스터마이징 (TCODE - FIORI LAUNCHPAD : `/n/ui2/flp`), TCODE - 테마 : `/n/ui5/theme_designer`)**
+- **3) Fiori Launchpad 타일 생성부터 권한 부여까지 전체 설정 가이드**
+</br>
+</br>
 
+---
+
+</br>
+
+## < 실습 코드 >
+</br>
+
+### 실습 1
