Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -14,3 +14,8 @@
 
 ### 실습 1
 - 타일에 SAP GUI 프로그램 추가
+- 다른 절차 다 동일하고, Tcode 생성 후 transaction 선택하는 부분만 다름
+
+<img width="796" height="246" alt="image" src="https://github.com/user-attachments/assets/bc14454c-f350-4fcf-86f0-fdc96606530b" />
+
+<img width="790" height="204" alt="image" src="https://github.com/user-attachments/assets/649d407d-9f5f-4942-a753-364f154ea43a" />
