Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -19,3 +19,5 @@
 <img width="796" height="246" alt="image" src="https://github.com/user-attachments/assets/bc14454c-f350-4fcf-86f0-fdc96606530b" />
 
 <img width="790" height="204" alt="image" src="https://github.com/user-attachments/assets/649d407d-9f5f-4942-a753-364f154ea43a" />
+
+<img width="785" height="383" alt="image" src="https://github.com/user-attachments/assets/15e5d686-ad80-4140-b075-e7a2c6a5643f" />
