Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -9,6 +9,25 @@
 
 </br>
 
+## < ABAP Dictionary 객체 유형 정리표 >
+
+| Dictionary Object Type        | DB Object | Data Type | Remark                                  |
+|------------------------------|-----------|-----------|------------------------------------------|
+| Domain                       | no        | no        | 데이터 요소에서만 사용됨                |
+| Data Element                 | no        | yes       |                                          |
+| Structure                    | no        | yes       |                                          |
+| Table Type                   | no        | yes       |                                          |
+| Database Table Definition    | yes       | yes       | 데이터 타입으로 사용하는 것은 권장되지 않음 |
+| Database View                | yes       | yes       | 구식 방식, 대신 CDS View 사용 권장      |
+
+
+</br>
+</br>
+
+---
+
+</br>
+
 ## < 실습 코드 >
 </br>
 
