Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -20,6 +20,12 @@
 | Database Table Definition    | yes       | yes       | 데이터 타입으로 사용하는 것은 권장되지 않음 |
 | Database View                | yes       | yes       | 구식 방식, 대신 CDS View 사용 권장      |
 
+</br>
+
+### 1) New → ABAP Package 선택하여 새로운 ABAP 패키지 생성
+
+<img width="592" height="295" alt="image" src="https://github.com/user-attachments/assets/5f1e1d7b-4301-49a3-9afe-797bcd997faf" />
+
 
 </br>
 </br>
