Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -25,7 +25,13 @@
 ### 1) New → ABAP Package 선택하여 새로운 ABAP 패키지 생성
 
 <img width="592" height="295" alt="image" src="https://github.com/user-attachments/assets/5f1e1d7b-4301-49a3-9afe-797bcd997faf" />
+</br>
+</br>
+</br>
 
+### 2) Z 패키지명(ZS4D430B03)으로 신규 ABAP 패키지를 생성
+
+<img width="592" height="402" alt="image" src="https://github.com/user-attachments/assets/505a7350-99c1-4c85-a6a4-dc4ce482b1f5" />
 
 </br>
 </br>
