Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -32,7 +32,38 @@
 ### 2) Z 패키지명(ZS4D430B03)으로 신규 ABAP 패키지를 생성
 
 <img width="592" height="402" alt="image" src="https://github.com/user-attachments/assets/505a7350-99c1-4c85-a6a4-dc4ce482b1f5" />
+</br>
+</br>
+</br>
 
+### 3) 패키지에 속할 Software Component(HOME) 선택
+
+<img width="591" height="202" alt="image" src="https://github.com/user-attachments/assets/7b9316e3-25b9-49c6-a997-438a8123c44b" />
+</br>
+</br>
+</br>
+
+### 4) Development 패키지로 설정 후 CA / ZEFX 지정
+
+<img width="594" height="222" alt="image" src="https://github.com/user-attachments/assets/33fa1796-11f4-454a-bf62-85b2691f617d" />
+</br>
+</br>
+</br>
+
+### 5) 신규 CTS 생성 후 패키지 생성
+- CTS TCODE: `SE09`
+
+<img width="570" height="512" alt="image" src="https://github.com/user-attachments/assets/f77cedaf-0ae1-4642-93d1-52e4c566a622" />
+</br>
+</br>
+</br>
+
+### 6) Favorite Packages에 패키지 추가 가능
+
+<img width="571" height="256" alt="image" src="https://github.com/user-attachments/assets/41adbab5-b80f-4fe0-a821-8f9d1145e163" />
+</br>
+</br>
+</br>
 </br>
 </br>
 
