Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -9,7 +9,7 @@
 
 </br>
 
-## < ABAP Dictionary 객체 유형 정리표 >
+### < ABAP Dictionary 객체 유형 정리표 >
 
 | Dictionary Object Type        | DB Object | Data Type | Remark                                  |
 |------------------------------|-----------|-----------|------------------------------------------|
@@ -20,6 +20,18 @@
 | Database Table Definition    | yes       | yes       | 데이터 타입으로 사용하는 것은 권장되지 않음 |
 | Database View                | yes       | yes       | 구식 방식, 대신 CDS View 사용 권장      |
 
+</br>
+
+### < ABAP CDS 주요 개발 객체 정리 >
+
+| 개발 객체 (Development Object) | 목적 | 설명 (이해 쉽게 정리) |
+|---------------------------------|------|------------------------|
+| CDS 데이터 정의 (CDS Data Definition) | CDS 엔티티 정의 | CDS View Entity 등 데이터 모델을 정의하는 객체<br>→ DB 테이블을 직접 사용하는 것이 아니라, CDS 기반의 논리적 뷰를 정의함<br><br>CDS 엔티티 종류:<br>- CDS View Entity (최신 표준)<br>- CDS DDIC 기반 View (구방식, obsolete)<br>- CDS Projection View<br>- CDS Abstract Entity<br>- CDS Table Function<br>- CDS Custom Entity<br>- CDS Hierarchy |
+| CDS 접근 제어 (CDS Access Control) | CDS 역할(Role) 정의 | 사용자 또는 역할별 데이터 조회 권한을 정의함<br>→ 특정 조건에 따라 데이터 읽기(Read) 접근을 제어 |
+| CDS 메타데이터 확장 (CDS Metadata Extension) | CDS 엔티티에 메타데이터 추가 | CDS 정의와 분리하여 UI 관련 정보(애노테이션 등)를 저장<br>→ 화면 설정을 CDS 본문과 분리 가능 |
+| CDS 행위 정의 (CDS Behavior Definition) | 비즈니스 객체의 동작 정의 | 생성(Create), 수정(Update), 삭제(Delete) 등 트랜잭션 동작 정의<br>→ RAP 모델에서 사용되는 핵심 구성 요소 |
+
+</br>
 </br>
 
 ### 1) New → ABAP Package 선택하여 새로운 ABAP 패키지 생성
