Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -9,6 +9,9 @@
 
 </br>
 
+## < ABAP CDS 개요와 Eclipse(ADT) 패키지 생성 방법 >
+</br>
+
 ### < ABAP Dictionary 객체 유형 정리표 >
 
 | Dictionary Object Type        | DB Object | Data Type | Remark                                  |
@@ -31,6 +34,12 @@
 | CDS 메타데이터 확장 (CDS Metadata Extension) | CDS 엔티티에 메타데이터 추가 | CDS 정의와 분리하여 UI 관련 정보(애노테이션 등)를 저장<br>→ 화면 설정을 CDS 본문과 분리 가능 |
 | CDS 행위 정의 (CDS Behavior Definition) | 비즈니스 객체의 동작 정의 | 생성(Create), 수정(Update), 삭제(Delete) 등 트랜잭션 동작 정의<br>→ RAP 모델에서 사용되는 핵심 구성 요소 |
 
+</br>
+</br>
+
+<img width="521" height="238" alt="image" src="https://github.com/user-attachments/assets/6bba0ae2-4ebe-4979-92f6-1924300f74d4" />
+</br>
+</br>
 </br>
 </br>
 
