Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -9,7 +9,7 @@
 
 </br>
 
-## < ABAP CDS 개요와 Eclipse(ADT) 패키지 생성 방법 >
+## < ABAP Dictionary 및 CDS 객체 구조 >
 </br>
 
 ### < ABAP Dictionary 객체 유형 정리표 >
@@ -87,6 +87,31 @@
 </br>
 </br>
 </br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < ABAP Cloud Database Table >
+- 기본키(key)와 필드 타입(기본 타입 또는 Data Element)을 명시하여 테이블 구조를 설계
+```abap
+define table /dmo/connection {        " 실제 DB 테이블 생성
+
+  key client        : abap.clnt not null;          " 클라이언트 (기본 타입 사용, PK)
+  key carrier_id    : /dmo/carrier_id not null;    " 항공사 ID (Data Element 참조, PK)
+  key connection_id : /dmo/connection_id not null; " 연결 ID (Data Element 참조, PK)
+
+  airport_from_id   : /dmo/airport_from_id;        " 출발 공항 (Data Element 참조)
+  airport_to_id     : /dmo/airport_to_id;          " 도착 공항 (Data Element 참조)
+  departure_time    : /dmo/flight_departure_time;  " 출발 시간
+  arrival_time      : /dmo/flight_arrival_time;    " 도착 시간
+  distance          : /dmo/flight_distance;        " 비행 거리
+  distance_unit     : msehi;                       " 거리 단위 (표준 Data Element)
+
+}
+```
 </br>
 </br>
 
