Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -45,6 +45,26 @@
 ## < Eclipse를 활용한 ABAP Cloud 개발 환경 구성 >
 </br>
 
+- Eclipse(ADT)에서 DDL 문법을 사용해 ABAP Cloud용 데이터베이스 테이블 구조를 정의
+- 기본키(key)와 필드 타입(기본 타입 또는 Data Element)을 명시하여 테이블 구조를 설계
+```abap
+define table /dmo/connection {        " 실제 DB 테이블 생성
+
+  key client        : abap.clnt not null;          " 클라이언트 (기본 타입 사용, PK)
+  key carrier_id    : /dmo/carrier_id not null;    " 항공사 ID (Data Element 참조, PK)
+  key connection_id : /dmo/connection_id not null; " 연결 ID (Data Element 참조, PK)
+
+  airport_from_id   : /dmo/airport_from_id;        " 출발 공항 (Data Element 참조)
+  airport_to_id     : /dmo/airport_to_id;          " 도착 공항 (Data Element 참조)
+  departure_time    : /dmo/flight_departure_time;  " 출발 시간
+  arrival_time      : /dmo/flight_arrival_time;    " 도착 시간
+  distance          : /dmo/flight_distance;        " 비행 거리
+  distance_unit     : msehi;                       " 거리 단위 (표준 Data Element)
+
+}
+```
+</br>
+
 <img width="521" height="238" alt="image" src="https://github.com/user-attachments/assets/6bba0ae2-4ebe-4979-92f6-1924300f74d4" />
 </br>
 </br>
@@ -100,24 +120,6 @@
 
 </br>
 
-## < ABAP Cloud Database Table >
-- 기본키(key)와 필드 타입(기본 타입 또는 Data Element)을 명시하여 테이블 구조를 설계
-```abap
-define table /dmo/connection {        " 실제 DB 테이블 생성
-
-  key client        : abap.clnt not null;          " 클라이언트 (기본 타입 사용, PK)
-  key carrier_id    : /dmo/carrier_id not null;    " 항공사 ID (Data Element 참조, PK)
-  key connection_id : /dmo/connection_id not null; " 연결 ID (Data Element 참조, PK)
-
-  airport_from_id   : /dmo/airport_from_id;        " 출발 공항 (Data Element 참조)
-  airport_to_id     : /dmo/airport_to_id;          " 도착 공항 (Data Element 참조)
-  departure_time    : /dmo/flight_departure_time;  " 출발 시간
-  arrival_time      : /dmo/flight_arrival_time;    " 도착 시간
-  distance          : /dmo/flight_distance;        " 비행 거리
-  distance_unit     : msehi;                       " 거리 단위 (표준 Data Element)
-
-}
-```
 </br>
 </br>
 
