Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -116,7 +116,9 @@ define table /dmo/connection {        " 실제 DB 테이블 생성
 </br>
 </br>
 
----
+#### 1) New → Other ABAP Repository Object 선택하여 새로운 ABAP 개발 객체를 생성
+
+<img width="764" height="145" alt="image" src="https://github.com/user-attachments/assets/d6c67084-85d0-44e7-b213-62e06f149da4" />
 
 </br>
 
