Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -73,7 +73,7 @@ define table /dmo/connection {        " 실제 DB 테이블 생성
 </br>
 </br>
 
-### < Eclipse에서 ABAP 패키지 생성 절차 >
+## < Eclipse에서 ABAP 패키지 생성 절차 >
 </br>
 
 #### 1) New → ABAP Package 선택하여 새로운 ABAP 패키지 생성
@@ -116,12 +116,40 @@ define table /dmo/connection {        " 실제 DB 테이블 생성
 </br>
 </br>
 
+## < Eclipse에서 Domain 생성 및 설정 >
+</br>
+
 #### 1) New → Other ABAP Repository Object 선택하여 새로운 ABAP 개발 객체를 생성
 
 <img width="764" height="145" alt="image" src="https://github.com/user-attachments/assets/d6c67084-85d0-44e7-b213-62e06f149da4" />
-
+</br>
 </br>
 
+#### 2) Dictionary → Domain 선택하여 도메인 객체를 생성
+<img width="523" height="234" alt="image" src="https://github.com/user-attachments/assets/25343d54-8d37-4425-8489-4e498f424024" />
+</br>
+</br>
+
+#### 3) 신규 Domain(ZDOPRICE_B03)을 생성하기 위해 프로젝트와 패키지를 지정
+<img width="582" height="350" alt="image" src="https://github.com/user-attachments/assets/672f08c0-2538-466f-a146-50c8320d87c4" />
+</br>
+</br>
+
+#### 4) Domain 생성 시 사용할 Transport Request(CTS) 선택
+<img width="580" height="345" alt="image" src="https://github.com/user-attachments/assets/1910b78f-0094-47c3-b962-7be40b8f4470" />
+</br>
+</br>
+
+### 5) Domain(ZDOPRICE_B03)에서 데이터 타입(CURR), 길이(15), 소수점(2)을 설정
+- `Case Sensitive` : 입력한 대소문자를 그대로 유지하여 화면에 출력
+- `Sign` : 음수 값 입력이 가능하도록 허용
+
+<img width="605" height="283" alt="image" src="https://github.com/user-attachments/assets/5b303fec-8d02-4e1c-b302-d71eb75afe2a" />
+</br>
+</br>
+
+
+</br>
 </br>
 </br>
 
