Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -140,15 +140,49 @@ define table /dmo/connection {        " 실제 DB 테이블 생성
 </br>
 </br>
 
-### 5) Domain(ZDOPRICE_B03)에서 데이터 타입(CURR), 길이(15), 소수점(2)을 설정
+#### 5) Domain(ZDOPRICE_B03)에서 데이터 타입(CURR), 길이(15), 소수점(2)을 설정
 - `Case Sensitive` : 입력한 대소문자를 그대로 유지하여 화면에 출력
 - `Sign` : 음수 값 입력이 가능하도록 허용
 
 <img width="605" height="283" alt="image" src="https://github.com/user-attachments/assets/5b303fec-8d02-4e1c-b302-d71eb75afe2a" />
 </br>
 </br>
+</br>
+</br>
+</br>
 
+## < Eclipse에서 Data Element 생성 및 설정 >
+</br>
 
+#### 1) Dictionary → Data Element 객체 선택
+
+<img width="509" height="263" alt="image" src="https://github.com/user-attachments/assets/ec904b30-caf2-4e08-b56d-10a4397b234c" />
+</br>
+</br>
+
+#### 2) Data Element 기본 정보 입력
+<img width="536" height="325" alt="image" src="https://github.com/user-attachments/assets/6c819ebc-80f0-4fb2-9509-d3bd73ed1fca" />
+</br>
+</br>
+
+#### 3) Data Element에 Domain 연결 설정
+<img width="746" height="274" alt="image" src="https://github.com/user-attachments/assets/6f0ce5bb-304c-4375-8c48-3efbc2c79c8c" />
+</br>
+</br>
+
+#### 4) Domain 데이터 타입 및 길이 설정
+<img width="799" height="127" alt="image" src="https://github.com/user-attachments/assets/013a14bd-741c-43a8-870d-f7753761da8d" />
+</br>
+</br>
+
+#### 5) Data Element 타입 및 필드 라벨 설정
+
+<img width="814" height="358" alt="image" src="https://github.com/user-attachments/assets/7e1e0dd6-b930-4b14-bbe2-fb87bca8e4f1" />
+
+</br>
+</br>
+</br>
+</br>
 </br>
 </br>
 </br>
