Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -42,6 +42,31 @@
 
 </br>
 
+## ABAP 사전(Dictionary) 미리 정의된 타입 정리
+
+| 구분 | 용도 | 사전 타입 (Predefined Dictionary Type) | 대응 ABAP 기본 타입 |
+|------|------|------------------------------------------|-----------------------|
+| 일반 | 문자형 데이터 | CHAR(n) | C LENGTH n |
+| 일반 | 4바이트 정수 | INT4 | I |
+| 일반 | 고정 소수점 숫자 (Binary Coded Decimals) | DEC(n,d) | P LENGTH n DECIMALS d |
+| 문자형 (특수 의미) | 숫자 나열 (앞자리 0 유지) | NUMC(n) | N LENGTH n |
+| 통화/수량 | 금액 필드 (통화 키 필요) | CURR(n,d) | P LENGTH n DECIMALS d |
+| 통화/수량 | 수량 필드 (단위 필요) | QUAN(n,d) | P LENGTH n DECIMALS d |
+| 통화/수량 | 통화 코드 필드 | CUKY | C LENGTH 5 |
+| 통화/수량 | 단위 필드 | UNIT(n) | C LENGTH n (n=2 또는 3) |
+| 날짜/시간 | 날짜 (YYYYMMDD 형식) | DATS | D |
+| 날짜/시간 | 시간 (HHMMSS 형식) | TIMS | T |
+
+
+
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
 ## < Eclipse를 활용한 ABAP Cloud 개발 환경 구성 >
 </br>
 
