Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -42,7 +42,7 @@
 
 </br>
 
-## ABAP 사전(Dictionary) 미리 정의된 타입 정리
+### < ABAP 사전(Dictionary) 미리 정의된 타입 >
 
 | 구분 | 용도 | 사전 타입 (Predefined Dictionary Type) | 대응 ABAP 기본 타입 |
 |------|------|------------------------------------------|-----------------------|
@@ -56,7 +56,15 @@
 | 통화/수량 | 단위 필드 | UNIT(n) | C LENGTH n (n=2 또는 3) |
 | 날짜/시간 | 날짜 (YYYYMMDD 형식) | DATS | D |
 | 날짜/시간 | 시간 (HHMMSS 형식) | TIMS | T |
+</br>
 
+### < DEC(P 타입) 길이 설정 >
+- P 타입 = 2자리당 1바이트 + 마지막 1자리는 부호
+- 계산식: (자릿수 + 1) ÷ 2 = 바이트 수
+  
+  - 길이 15 : (15+1)/2 = 8바이트 → 정확히 15자리 저장
+  - 길이 16 : (16+1)/2 = 8.5 → 9바이트 할당 → 17자리 저장 가능
+  - 짝수는 메모리 낭비 발생 → 홀수 권장
 
 
 </br>
