Update 1-11. 프로그래밍 코드 최적화(02.19).md

--- a/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
+++ b/RAP/1-11. 프로그래밍 코드 최적화(02.19).md
@@ -1,7 +1,9 @@
 ## <  핵심 개념 >
-- **1) npm 기반 프론트엔드 배포 절차 정리**
+- **1) ABAP Dictionary 및 CDS 객체 구조**
 - **2) SAP UI5 테마 커스터마이징 (TCODE - FIORI LAUNCHPAD : `/n/ui2/flp`), TCODE - 테마 : `/n/ui5/theme_designer`)**
-- **3) Fiori Launchpad 타일 생성부터 권한 부여까지 전체 설정 가이드**
+- **3) Eclipse에서 ABAP 패키지 생성 절차**
+- **4) Eclipse에서 Domain 생성 절차**
+- **5) Eclipse에서 Data Element 생성 절차**
 </br>
 </br>
 
@@ -149,7 +151,7 @@ define table /dmo/connection {        " 실제 DB 테이블 생성
 </br>
 </br>
 
-## < Eclipse에서 Domain 생성 및 설정 >
+## < Eclipse에서 Domain 생성 절차 >
 </br>
 
 #### 1) New → Other ABAP Repository Object 선택하여 새로운 ABAP 개발 객체를 생성
@@ -184,7 +186,7 @@ define table /dmo/connection {        " 실제 DB 테이블 생성
 </br>
 </br>
 
-## < Eclipse에서 Data Element 생성 및 설정 >
+## < Eclipse에서 Data Element 생성 절차 >
 </br>
 
 #### 1) Dictionary → Data Element 객체 선택
